# ds-templates

./: README.md  cookiecutter.json  requirements.txt
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: .flake8  .gitignore  .gitmodules  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
{{ cookiecutter.project_slug }}/docs/source/: conf.py  index.rst  usage.rst
{{ cookiecutter.project_slug }}/{{ 'docker' if cookiecutter.use_docker == 'y' else '_docker' }}/: Dockerfile
{{ cookiecutter.project_slug }}/{{ 'src' if cookiecutter.project_type != 'library' else '_apps' }}/logger/: logger.py
{{ cookiecutter.project_slug }}/{{ 'src' if cookiecutter.project_type != 'library' else '_src' }}/_grpc/: grpc.py
{{ cookiecutter.project_slug }}/{{ 'src' if cookiecutter.project_type != 'library' else '_src' }}/exceptions/: exceptions.py
{{ cookiecutter.project_slug }}/{{ 'src' if cookiecutter.project_type != 'library' else '_src' }}/grpc/: grpc.py
{{ cookiecutter.project_slug }}/{{ 'src' if cookiecutter.project_type != 'library' else '_src' }}/helpers/: helpers.py
{{ cookiecutter.project_slug }}/{{ 'src' if cookiecutter.project_type != 'library' else '_src' }}/http/: http.py
{{ cookiecutter.project_slug }}/{{ 'tests' if cookiecutter.project_type != 'library' else '_tests' }}/: conftest.py
