[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.project_version }}"
authors = [
  { name="{{ cookiecutter.author_name }}", email="{% if cookiecutter.author_email != '' %} {{ cookiecutter.author_email }} {% endif %}" },
]
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
coverage = "7.0.1"
pre-commit = "3.0.0"
pytest = "7.2.1"

[tool.poetry.dependencies]
python = "^3.8"

{% if cookiecutter.dependencies_install_type == "setuptools" -%}
{% if cookiecutter.use_utils == "y" -%}
utils = {git = "https://github.com/dong-toggle-ai/ds-packages", subdirectory = "utils"}
{% endif -%}
{% if cookiecutter.use_calculator == "y" -%}
calculator = {git = "https://github.com/dong-toggle-ai/ds-packages", subdirectory = "calculator"}
{% endif -%}
{% endif -%}