[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.project_version }}"
authors = [
  { name="{{ cookiecutter.author_name }}", email="{% if cookiecutter.author_email != '' %} {{ cookiecutter.author_email }} {% endif %}" },
]
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
coverage = "7.1.0"
pre-commit = "3.0.0"
pytest = "7.2.1"
tox = "4.4.5"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
{% if cookiecutter.use_utils == "y" -%}
utils = {git = "https://github.com/dong-toggle-ai/ds-packages", tag="3.0", subdirectory = "utils"}
{% endif -%}
{% if cookiecutter.use_calculator == "y" -%}
calculator = {git = "https://github.com/dong-toggle-ai/ds-packages", tag="3.0", subdirectory = "calculator"}
{% endif -%}
