[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.project_version }}"
authors = [
  { name="{{ cookiecutter.author_name }}", email="{% if cookiecutter.author_email != '' %} {{ cookiecutter.author_email }} {% endif %}" },
]
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
coverage = "7.1.0"
pre-commit = "3.0.0"
pytest = "7.2.1"
tox = "4.4.5"
sphinx = "6.1.3"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
{% if cookiecutter.use_gcp_lib == "y" -%}
py-gcp = {git = "https://github.com/toggleglobal/py-gcp", branch="main"}
{% endif -%}
{% if cookiecutter.use_grpc_lib == "y" -%}
py-grpc = {git = "https://github.com/toggleglobal/py-grpc", branch="main"}
{% endif -%}
